# fastapi_ecommerce

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  gunicorn.conf.py  nginx.conf  pyproject.toml
app/: log.py  main.py
app/backend/: __init__.py  celery.py  config.py  db.py
app/dependency/: __init__.py  auth.py
app/exceptions/: __init__.py  auth.py  review.py  user.py
app/models/: __init__.py  category.py  product.py  review.py  user.py
app/repos/: __init__.py  category.py  product.py  review.py  user.py
app/routers/: __init__.py  auth.py  category.py  product.py  review.py
app/schemas/: __init__.py  category.py  constants.py  mixins.py  product.py  review.py  user.py
app/services/: __init__.py  category.py  product.py  review.py  user.py
app/tools/: __init__.py  exceptions.py  jwt_tools.py  oauth2_tools.py  roles.py
app/workers/: __init__.py
app/workers/tasks/auth/: tasks.py
migrations/: env.py
migrations/versions/: 3ded09611608_user_addded.py  576e736bae7d_user_addded.py  7e307609e920_review_added.py  7f4cfbc508bf_review_unique_constraint_added.py  a8329b161836_add_category_product.py
